Trying to move to flake

--- a/pkgs/hyprland/hyprland.conf
+++ b/pkgs/hyprland/hyprland.conf
@@ -211,3 +211,5 @@ exec-once=eww daemon
 exec-once=eww open bar
 exec-once=webcord
 exec-once=hyprpaper
+exec-once=eval $(gnome-keyring-daemon --start)
+exec-once=export SSH_AUTH_SOCK
